# service/role-service.go
@@ -2,6 +2,7 @@ package service
 
 import (
 	"joranvest/commons"
+	"joranvest/dto"
 	"joranvest/helper"
 	"joranvest/models"
 	"joranvest/repository"
@@ -18,20 +19,28 @@ type RoleService interface {
 	GetById(recordId string) helper.Result
 	DeleteById(recordId string) helper.Result
 
+	//-- Configuration
+	SetNotification(dto *dto.RoleNotificationDto, ctx *gin.Context) helper.Result
+	GetNotificationConfigurationByRoleId(roleId string) helper.Result
+
 	OpenTransaction(trxHandle *gorm.DB) roleService
 }
 
 type roleService struct {
-	DB             *gorm.DB
-	jwtService     JWTService
-	roleRepository repository.RoleRepository
+	DB                         *gorm.DB
+	jwtService                 JWTService
+	roleRepository             repository.RoleRepository
+	roleNotificationRepository repository.RoleNotificationRepository
+	serviceRepository          repository.ServiceRepository
 }
 
 func NewRoleService(db *gorm.DB, jwtService JWTService) RoleService {
 	return roleService{
-		DB:             db,
-		jwtService:     jwtService,
-		roleRepository: repository.NewRoleRepository(db),
+		DB:                         db,
+		jwtService:                 jwtService,
+		roleRepository:             repository.NewRoleRepository(db),
+		roleNotificationRepository: repository.NewRoleNotificationRepository(db),
+		serviceRepository:          repository.NewServiceRepository(db),
 	}
 }
 
@@ -56,6 +65,35 @@ func (r roleService) Save(record models.Role, ctx *gin.Context) helper.Result {
 		record.UpdatedBy = &userIdentity.UserId
 		return r.roleRepository.Update(record)
 	}
+}
+
+func (r roleService) SetNotification(dto *dto.RoleNotificationDto, ctx *gin.Context) helper.Result {
+	authHeader := ctx.GetHeader("Authorization")
+	userIdentity := r.jwtService.GetUserByToken(authHeader)
+
+	var record models.RoleNotification
+	record.CreatedBy = &userIdentity.UserId
+	record.RoleId = &dto.RoleId
+
+	if len(*dto.NotificationName) > 0 {
+		for _, value := range *dto.NotificationName {
+			for _, service := range commons.JoranvestNotificationServices {
+				//-- Email Notificaiton
+				if value == service.Name && service.Name == commons.PaymentNotification {
+					hasPaymentNotification := true
+					record.HasPaymentNotification = &hasPaymentNotification
+					record.PaymentNotificationType = &service.Type
+				}
+			}
+		}
+		return r.roleNotificationRepository.SetNotification(record)
+	} else {
+		return r.roleNotificationRepository.DeleteByRoleId(dto.RoleId)
+	}
+}
+
+func (r roleService) GetNotificationConfigurationByRoleId(roleId string) helper.Result {
+	return r.roleNotificationRepository.GetRoleById(roleId)
 }
 
 func (r roleService) GetById(recordId string) helper.Result {
